--- a/Investment/Podfile
+++ b/Investment/Podfile
@@ -10,6 +10,7 @@ target 'Investment' do
   pod 'IQKeyboardManager'
   pod 'IQKeyboardManagerSwift'
   pod 'MaterialComponents/TextFields'
+  pod 'TextFieldEffects'
 
   target 'InvestmentTests' do
     inherit! :search_paths
